Post creation works fine
